# PingTower-T1-InTeam

./: .env  .env.example  .gitignore  README.md  compose.yml  team23-203.81.208.28  test_consumer.py  test_publisher.py
LLM_service/: Dockerfile  broker.py  compose.yml  openai_wrapper.py  requirements.txt  worker.py
api_service/: Dockerfile  main.py  requirements.txt
archiver/: Dockerfile  archive.py  main.py
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: broker.py  config.py  consumers.py  main.py
broker/: Dockerfile  broker.py  pyproject.toml
clickhouse/: __init__.py  clickhouse.py  models.py
clickhouse/init/: init.sql
core/: __init__.py  config.py
database/: Dockerfile  README.md  __init__.py  database.py  models.py
example/: Dockerfile  broker.py  main.py
frontend/pingtower-flow/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
notifier-service/: .env.example  README.md  docker-compose.yml
notifier-service/broker/: broker.py
notifier-service/checker/: Dockerfile  checker.py  config.py  requirements.txt
notifier-service/dispatcher/: Dockerfile  __init__.py  app.py  main.py  models.py  requirements.txt
notifier-service/email-sender/: requirements.txt  smtp.py
notifier-service/tg-bot/: Dockerfile  bot.py  broker.py  requirements.txt
pinger/: Dockerfile  broker.py  docker-compose.yml  pinger_checks.py  pinger_loop.py  requirements.txt
postgres/init/: init.sql
scripts/: seed_demo_data.py
web/pingtower-flow/: index.html  package-lock.json  package.json
(+68 files in other folders)
