[project]
name = "t1-inteam"
version = "0.1.0"
description = ""
authors = [
    {name = "Tuammar"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "faststream[rabbit] (>=0.5.48,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
